<resources>
    <string name="app_name">Test</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="setting">Setting</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="None">None</string>
    <string name="about">About Us</string>
    <string name="member">Member</string>
    <string name="medicine">Medicine</string>
    <string name="clinic">Clinic</string>
    <string name="patient">Patient</string>
    <string name="doctor">Doctor</string>
    <string name="up_to_date">Up-to-date</string>
    <string name="news">News</string>
    <string name="see_all">See All</string>
    <string name="logout">Log Out</string>
    <string name="profile">Profile</string>
    <string name="kedon">Prescription</string>
</resources>