<?xml version="1.0" encoding="utf-8"?>
<layout>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_smoke"
        android:clickable="true"
        android:focusable="true"
        android:paddingBottom="?attr/actionBarSize"
        tools:context=".modules.view.home.HomeFragment">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/homebg" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/dark_late_gray" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/img1"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:padding="2dp"
                        android:src="@drawable/drug"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/img2"
                        app:layout_constraintTop_toTopOf="@id/img2" />

                    <TextView
                        android:id="@+id/name1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/medicine"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        app:layout_constraintLeft_toLeftOf="@+id/img1"
                        app:layout_constraintRight_toRightOf="@id/img1"
                        app:layout_constraintTop_toBottomOf="@+id/img1" />

                    <ImageView
                        android:id="@+id/img2"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:padding="2dp"
                        android:src="@drawable/clinic"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/name2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/clinic"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        app:layout_constraintLeft_toLeftOf="@+id/img2"
                        app:layout_constraintRight_toRightOf="@id/img2"
                        app:layout_constraintTop_toBottomOf="@+id/img2" />

                    <ImageView
                        android:id="@+id/img3"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:padding="2dp"
                        android:src="@drawable/patient"
                        app:layout_constraintLeft_toRightOf="@id/img2"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="@id/img2" />

                    <TextView
                        android:id="@+id/name3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/patient"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        app:layout_constraintLeft_toLeftOf="@+id/img3"
                        app:layout_constraintRight_toRightOf="@id/img3"
                        app:layout_constraintTop_toBottomOf="@+id/img3" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/img4"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:padding="2dp"
                        android:src="@drawable/doctorbackground"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/img5"
                        app:layout_constraintTop_toTopOf="@id/img5" />

                    <TextView
                        android:id="@+id/name4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/doctor"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        app:layout_constraintLeft_toLeftOf="@+id/img4"
                        app:layout_constraintRight_toRightOf="@id/img4"
                        app:layout_constraintTop_toBottomOf="@+id/img4" />

                    <ImageView
                        android:id="@+id/img5"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:padding="2dp"
                        android:src="@drawable/ticket"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/name5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kedon"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        app:layout_constraintLeft_toLeftOf="@+id/img5"
                        app:layout_constraintRight_toRightOf="@id/img5"
                        app:layout_constraintTop_toBottomOf="@+id/img5" />

                    <ImageView
                        android:id="@+id/img6"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:padding="2dp"
                        android:src="@drawable/update"
                        app:layout_constraintLeft_toRightOf="@id/img5"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="@id/img5" />

                    <TextView
                        android:id="@+id/name6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/up_to_date"
                        android:textColor="@color/black"
                        android:textSize="18sp"
                        app:layout_constraintLeft_toLeftOf="@+id/img6"
                        app:layout_constraintRight_toRightOf="@id/img6"
                        app:layout_constraintTop_toBottomOf="@+id/img6" />

                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="Latest News"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/seeAll"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:text="@string/see_all"
                        android:textColor="#D84618"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.viewpager2.widget.ViewPager2
                    android:id="@+id/viewPager"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginTop="10dp" />
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </FrameLayout>
</layout>
